# Continued-Fraction-Rationals

./: .gitignore  LICENSE.txt  LaTeX_report.url  Proofs and Demo.ipynb  README.md  lcf.dvi - download;jsessionid=12D41B2100B4F373950C0B28B7AFD793.webloc  precision measure.py  precision_measure.ipynb
Implementation/: CMakeLists.txt  divide_non_negative_remainder.h  main.cpp  rational.cpp  rational.h  rational_TEST.cpp  rational_TEST.h  rational_base.cpp  rational_base.h  rational_hyperops.cpp  rational_hyperops.h  rational_static.cpp  rational_static.h
Implementation/Bit Encoding/: BitSeqWord.h  BitSeqWord.tpp  BitSeqWord_test.cpp  BitSequence.h  CMakeLists.txt
Implementation/Int Encoding/: BitSequence.h  BitSequence_cpp.h  BitSequence_test.cpp  BitTwiddles.h  CMakeLists.txt  InfIntSequence.cpp  InfIntSequence.h  WholeNumSequence.h  WholeNumSequence.tpp  WholeNumSequence_cpp.h  WholeNumSequence_test.cpp
Implementation/Utility/: BitTwiddles.h  CMakeLists.txt
Implementation/include/: CMakeLists.txt
Implementation/include/bit-encoding/: BitSequence.hpp  BitSequence.tpp  CMakeLists.txt
Implementation/include/bit-utility/: BitTwiddles.hpp  CMakeLists.txt
Implementation/include/bit-word/: BitSeqWord.hpp  BitSeqWord.tpp  CMakeLists.txt
Implementation/include/utilities/: BitTwiddles.cpp  BitTwiddles.hpp  BitTwiddles.tpp  CMakeLists.txt  TypeUtility.hpp  endian.hpp
Implementation/include/whole-num-encoding/: CMakeLists.txt  WholeNumSeq_Base.cpp  WholeNumSeq_Base.hpp  WholeNumSeq_Base.tpp  WholeNumSeq_SBS1.cpp  WholeNumSeq_SBS1.hpp  WholeNumSeq_SBS1.tpp  WholeNumSeq_SBS2.cpp  WholeNumSeq_SBS2.hpp  WholeNumSeq_SBS2.tpp  WholeNumSeq_SBSBase.cpp  WholeNumSeq_SBSBase.hpp  WholeNumSeq_SBSBase.tpp  WholeNumSequence.cpp  WholeNumSequence.h  WholeNumSequence.hpp  WholeNumSequence.tpp
Implementation/include/word-of-bits/: BitSeqWord.hpp  BitSeqWord.tpp  CMakeLists.txt
Implementation/include/word-pointer/: CMakeLists.txt  WordPointer.hpp  WordPointer.tpp  WordPointer_reverse.tpp
Implementation/test/: BitSeqWord_test.cpp  BitSequence_test.cpp  BitTwiddles_test.cpp  CMakeLists.txt  WholeNumSequence_test.cpp  WordPointer_test.cpp
Reading/: Chaos in Numberland- The secret life of continued fractions | plus.maths.org.webloc  Let's ask for a term from _z_.webloc  Numbers and Functions as Continued Fractions - Numericana.webloc  WRAP_Beynon_cs-rr-034.pdf.webloc
python_implementation/: setup.py
python_implementation/cfq/: arithmetics.py  bases.py  statics.py
python_implementation/tests/: test_arithmetics.py  test_bases.py  test_statics.py
