add_library(WholeNumSequence WholeNumSequence.h WholeNumSequence.tpp)

set_target_properties(WholeNumSequence PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories(WholeNumSequence INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(WholeNumSequence LINK_PUBLIC BitTwiddles BitSequence)


add_executable(WholeNumSequence_test WholeNumSequence_test.cpp)
target_link_libraries(WholeNumSequence_test LINK_PRIVATE WholeNumSequence)
