
add_executable(BitTwiddles_test BitTwiddles_test.cpp)
target_link_libraries(BitTwiddles_test LINK_PRIVATE BitTwiddles)


add_executable(BitSequence_test BitSequence_test.cpp)
target_link_libraries(BitSequence_test LINK_PRIVATE BitTwiddles BitSequence)


add_executable(WholeNumSequence_test WholeNumSequence_test.cpp)
target_link_libraries(WholeNumSequence_test LINK_PRIVATE BitSequence WholeNumSequence)
